--- a/src/input.css
+++ b/src/input.css
@@ -20,4 +20,4 @@
 .liquid-glass{
   background-color: rgba(235, 225, 212, 0.4);
   backdrop-filter: blur(20px);
-}
+  -webkit-backdrop-filter: blur(20px);}
