More UI updates and new pages added

--- a/src/input.css
+++ b/src/input.css
@@ -21,3 +21,9 @@
   background-color: rgba(235, 225, 212, 0.4);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);}
+
+.liquid-glass-2{
+  background-color: rgba(225, 198, 173, 0.4);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);}
+
