--- a/src/input.css
+++ b/src/input.css
@@ -27,7 +27,21 @@
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);}
 
-.text-liquid-glass-2{
-  color: rgba(225, 198, 173, 0.4);
+.liquid-glass-3{
+  background-color: rgba(38, 35, 237, 0.4);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);}
+
+.no-transition {
+  transition: none !important;
+}
+
+.img-container:hover .inner-bg {
+  opacity: 0;
+  transform: scale(1.1);
+}
+
+.inner-bg {
+  opacity: 1;
+  transform: scale(1);
+}
